@@ -4,6 +4,8 @@
   * Significant memory reduction for decoding lossy images with alpha.
   * Intertwined decoding of RGB and alpha for a shorter
     time-to-first-decoded-pixel.
+  * WebPIterator has a new member 'has_alpha' denoting whether the frame
+    contains transparency.
 
 - 6/13/13: version 0.3.1
   This is a binary compatible release.
